# newsly-frontend

./: .gitignore  Database.md  api.md
news-personalization/: next.config.mjs  package-lock.json  package.json
news-personalization (5)/: package-lock.json  package.json  tailwind.config.ts
news-personalization (5)/app/: globals.css  page.tsx
news-personalization (5)/app/components/: corner-decoration.tsx  date-picker.tsx  news-card.tsx
news-personalization (5)/app/credentials/: page.tsx
news-personalization (5)/app/onboarding/: page.tsx
news-personalization (5)/app/profile-setup/: page.tsx
news-personalization (5)/app/settings/: page.tsx
news-personalization (5)/app/signin/: page.tsx
news-personalization (5)/app/signup/: page.tsx
news-personalization (5)/contexts/: AuthContext.tsx
news-personalization (5)/lib/: api.ts
news-personalization/app/: layout.tsx  page.tsx
news-personalization/app/components/: corner-decoration.tsx  date-picker.tsx  news-card.tsx  sidebar-calendar.tsx
news-personalization/app/credentials/: page.tsx
news-personalization/lib/: api.ts
newsly-recommendations-api/: .env  .env.example  API_REFERENCE.md  CAPACITY_AND_SECURITY_REPORT.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PASSWORD_GATE_FLOW.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  SECURITY.md  SETUP_GUIDE.md  auth.py  config.py  create_db.sql  database.py  main.py  main_old.py  oauth.py  pyproject.toml  rate_limiter.py  requirements.txt  schema.sql  security_audit.py  user_service.py
newsly-recommendations-api/migrations/: 001_add_users_table.sql
(+12 files in other folders)
