[project]
name = "newsly-recommendations-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "authlib==1.3.0",
    "email-validator==2.1.0",
    "fastapi==0.109.0",
    "httpx==0.26.0",
    "itsdangerous==2.1.2",
    "passlib[bcrypt]==1.7.4",
    "psycopg2-binary==2.9.9",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
    "slowapi==0.1.9",
    "uvicorn[standard]==0.27.0",
]
